idea/testData/multiplatform/kt41218/jvm/jvm.kt
package sample

fun test() {
    <!OVERLOAD_RESOLUTION_AMBIGUITY!>arrayListOf<!>(1, 2, 3)
}